Fixed all page links and navigation flow 💫

--- a/index (3).html
+++ b/index (3).html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Final Message</title>
+  <title>Happy Birthday Saeed</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="final">
-  <div class="stars"></div>
+<body class="welcome">
+  <div class="balloons"></div>
   <div class="content">
-    <h1>You’re truly one of a kind. Happiest Birthday, Saeed!</h1>
-    <a href="gift.html" class="btn">Previous</a>
+    <h1>Hey Saeed! A special surprise just for you 🎁</h1>
+    <a href="memory.html" class="btn">Next</a>
   </div>
+  <script src="balloons.js"></script>
 </body>
 </html>
