--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF‑8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Happy Birthday Saeed</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="balloons.js"></script>
 </head>
 <body class="welcome">
   <div class="balloons"></div>
@@ -12,6 +13,5 @@
     <h1>Hey Saeed! A special surprise just for you 🎁</h1>
     <a href="memory.html" class="btn">Next</a>
   </div>
-  <script src="balloons.js"></script>
 </body>
 </html>
