--- a/memory.html
+++ b/memory.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memory Lane</title>
+  <meta charset="UTF‑8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Happy Birthday Saeed</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="balloons.js"></script>
 </head>
-<body class="memory">
-  <div class="sparkles"></div>
+<body class="welcome">
+  <div class="balloons"></div>
   <div class="content">
-    <h1>Every memory with you is a treasure... here's to many more!</h1>
-    <a href="index.html" class="btn">Previous</a>
-    <a href="wishes.html" class="btn">Next</a>
+    <h1>Hey Saeed! A special surprise just for you 🎁</h1>
+    <a href="memory.html" class="btn">Next</a>
   </div>
 </body>
 </html>
