--- a/wishes.html
+++ b/wishes.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Birthday Wishes</title>
   <link rel="stylesheet" href="style.css" />
+  <script defer src="fireworks.js"></script>
 </head>
 <body class="wishes">
   <div class="fireworks"></div>
@@ -13,6 +14,5 @@
     <a href="memory.html" class="btn">Previous</a>
     <a href="gift.html" class="btn">Next</a>
   </div>
-  <script src="fireworks.js"></script>
 </body>
 </html>
